# group-10-final-project-task

./: .gitignore  README.md  datastructures.py  presentation.pptx  pyproject.toml  task1.py  task2.py
assistant_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
bot/: addressbook.py  cli.py  commands.py  errors.py  note.py  notebook.py  storage.py  welcome_help.py  welcome_menu.py
test_case/: test.md
