[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "assistant-bot"
version = "1.0.0"
description = "Personal assistant CLI bot for managing contacts and notes"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
include = ["bot*"]

[project.scripts]
assistant-bot = "bot.cli:main"
